# fuzzy-eqsat

./: .gitignore  Cargo.toml  README.md  graph.dot  justfile  lenet_model_params.json  mnist_model_params.json  optimized.json
experiments/lenet/: results.csv
experiments/mlp/: results.csv
experiments_final/lenet/: results.csv
experiments_final/lenet/lenet::0::1::None/: parameters.json
experiments_final/lenet/lenet::0::1::[-3-0]/: parameters.json
experiments_final/lenet/lenet::0::None::[-3-0]/: parameters.json  pareto_points.json
experiments_final/lenet/lenet::1::1::None/: parameters.json
experiments_final/lenet/lenet::1::1::[-3-0]/: parameters.json  pareto_points.json
experiments_final/lenet/lenet::1::None::[-3-0]/: parameters.json
experiments_final/lenet/lenet::2::1::None/: parameters.json  pareto_points.json
experiments_final/lenet/lenet::2::1::[-3-0]/: parameters.json  pareto_points.json
experiments_final/lenet/lenet::2::None::[-3-0]/: parameters.json
experiments_final/lenet/lenet::3::1::None/: parameters.json  (+1 more)
experiments_final/mlp/: pareto_points_both.json  pareto_points_both_2.json  pareto_points_both_3.json  pareto_points_svd_1.json  results.csv
models/: lenet_model_params.json
report/: main.typ  refs.bib
src/: analysis.rs  cost.rs  extract.rs  lang.rs  load.rs  main.rs  math.rs  matrix.rs  model.rs  plot.rs  util.rs
src/template/: prelude.py
tools/: pyproject.toml
tools/files/: lenet_both.json  lenet_prune_1.json  lenet_prune_2.json  lenet_prune_3.json  lenet_svd.json  lenet_svd_1.json  mlp_prune.json  mlp_svd_2.json
(+21 files in other folders)
