[package]
name = "egg-svd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
egg = "0.10.0"
ndarray = { version = "0.16.1", features=["serde"]}
ndarray-linalg = { version = "0.17.0", features = ["openblas-static"]}
openblas-src = "0.10.13"
serde = { version = "1.0.226", features=["derive"]}
serde_json = "1.0.145"
