[package]
name = "egg-svd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
egg = "0.10.0"
env_logger = "0.11.8"
indexmap = "2.12.0"
log = "0.4.28"
ndarray = { version = "0.16.1", features=["serde"]}
ndarray-linalg = { version = "0.17.0", features = ["openblas-static"]}
ndarray-stats = "0.6.0"
openblas-src = "0.10.13"
rayon = "1.11.0"
serde = { version = "1.0.226", features=["derive"]}
serde_json = "1.0.145"
